--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,14 @@
+/* Remove arrows from number input */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
