-attempt to solve ios device zoom-in for input fields

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,11 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+body {
+  font-size: 16px;
+}
+input, select { font-size: 100%; }
+
 /* Firefox */
 input[type="number"] {
   /* Remove arrows */
